--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script text="javascript" src="main.js"></script>
+    <script text="javascript" src="snake.js"></script>
   </head>
   <body>
   </body>
